added packaging and plugins

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-typer >= 0.12.5
+--index-url https://test.pypi.org/simple/
+--extra-index-url https://pypi.org/simple/
+typer >= 0.16
 inquirer >= 3.4.0
-typer-shell >= 0.1.12
+twine >= 6.1.0
+build >= 1.2.2
+recodex-cli-lib-eceltov==0.0.46
