--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ typer >= 0.16
 inquirer >= 3.4.0
 twine >= 6.1.0
 build >= 1.2.2
-recodex-cli-lib-eceltov==0.0.60
+recodex-cli-lib-eceltov==0.0.63
+flask >= 3.1.1
 flake8 >= 7.3.0
