--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
---index-url https://test.pypi.org/simple/
---extra-index-url https://pypi.org/simple/
 typer >= 0.16
 inquirer >= 3.4.0
 twine >= 6.1.0
 build >= 1.2.2
-recodex-cli-lib-eceltov==0.0.66
+recodex-pylib==0.2.0
 flask >= 3.1.1
 flake8 >= 7.3.0
